rewrite the full docs