@@ -3,7 +3,10 @@ package com.habbashx.larv.runtime.stdlib;
 
 import com.habbashx.larv.error.LarvError;
 import com.habbashx.larv.runtime.ExecutionContext;
+import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Unmodifiable;
 
 import java.util.ArrayList;
 import java.util.Collections;
@@ -11,7 +14,6 @@ import java.util.List;
 
 /**
  * List standard library — import list
- *
  *   listNew()              → array    create empty list
  *   listAdd(list, val)     → nil      append val to list
  *   listAddAt(list,i,val)  → nil      insert val at index i
@@ -35,6 +37,8 @@ import java.util.List;
  *   listPop(list)          → any      remove and return last element
  *   listShuffle(list)      → nil      shuffle in place
  */
+@SuppressWarnings("unchecked")
+@Native("List Library")
 public class NativeListLibrary implements NativeLibrary {
 
     private final ExecutionContext context;
@@ -69,7 +73,6 @@ public class NativeListLibrary implements NativeLibrary {
         context.registerNative("listShuffle",  this::listShuffle);
     }
 
-    @SuppressWarnings("unchecked")
     private List<Object> listArg(@NotNull List<Object> args, int i, String fn) {
         if (args.size() <= i || !(args.get(i) instanceof List))
             throw new LarvError(fn + "(): argument " + (i+1) + " must be a list", -1, LarvError.Kind.RUNTIME);
@@ -87,24 +90,25 @@ public class NativeListLibrary implements NativeLibrary {
             throw new LarvError(fn + "(): index " + i + " out of bounds (size=" + list.size() + ")", -1, LarvError.Kind.RUNTIME);
     }
 
-    private Object listNew(List<Object> a)     { return new ArrayList<>(); }
+    @Contract(value = "_ -> new", pure = true)
+    private @NotNull Object listNew(List<Object> a)     { return new ArrayList<>(); }
     private Object listSize(List<Object> a)    { return (double) listArg(a,0,"listSize").size(); }
-    private Object listIsEmpty(List<Object> a) { return listArg(a,0,"listIsEmpty").isEmpty(); }
-    private Object listClear(List<Object> a)   { listArg(a,0,"listClear").clear(); return null; }
+    private @NotNull @Unmodifiable Object listIsEmpty(List<Object> a) { return listArg(a,0,"listIsEmpty").isEmpty(); }
+    private @Nullable Object listClear(List<Object> a)   { listArg(a,0,"listClear").clear(); return null; }
 
-    private Object listAdd(List<Object> a) {
+    private @Nullable Object listAdd(List<Object> a) {
         listArg(a,0,"listAdd").add(a.size() > 1 ? a.get(1) : null);
         return null;
     }
 
-    private Object listAddAt(List<Object> a) {
+    private @Nullable Object listAddAt(List<Object> a) {
         List<Object> list = listArg(a,0,"listAddAt");
         int i = intArg(a,1,"listAddAt");
         list.add(i, a.get(2));
         return null;
     }
 
-    private Object listRemove(List<Object> a) {
+    private @Nullable Object listRemove(List<Object> a) {
         List<Object> list = listArg(a,0,"listRemove");
         int i = intArg(a,1,"listRemove");
         checkBounds(list, i, "listRemove");
@@ -119,7 +123,7 @@ public class NativeListLibrary implements NativeLibrary {
         return list.get(i);
     }
 
-    private Object listSet(List<Object> a) {
+    private @Nullable Object listSet(List<Object> a) {
         List<Object> list = listArg(a,0,"listSet");
         int i = intArg(a,1,"listSet");
         checkBounds(list, i, "listSet");
@@ -127,28 +131,29 @@ public class NativeListLibrary implements NativeLibrary {
         return null;
     }
 
-    private Object listContains(List<Object> a) { return listArg(a,0,"listContains").contains(a.get(1)); }
+    private @NotNull @Unmodifiable Object listContains(List<Object> a) { return listArg(a,0,"listContains").contains(a.get(1)); }
     private Object listIndexOf(List<Object> a)  { return (double) listArg(a,0,"listIndexOf").indexOf(a.get(1)); }
 
     private Object listFirst(List<Object> a) {
         List<Object> list = listArg(a,0,"listFirst");
         if (list.isEmpty()) throw new LarvError("listFirst(): list is empty", -1, LarvError.Kind.RUNTIME);
-        return list.get(0);
+        return list.getFirst();
     }
 
     private Object listLast(List<Object> a) {
         List<Object> list = listArg(a,0,"listLast");
         if (list.isEmpty()) throw new LarvError("listLast(): list is empty", -1, LarvError.Kind.RUNTIME);
-        return list.get(list.size() - 1);
+        return list.getLast();
     }
 
     private Object listPop(List<Object> a) {
         List<Object> list = listArg(a,0,"listPop");
         if (list.isEmpty()) throw new LarvError("listPop(): list is empty", -1, LarvError.Kind.RUNTIME);
-        return list.remove(list.size() - 1);
+        return list.removeLast();
     }
 
-    private Object listSlice(List<Object> a) {
+    @Contract("_ -> new")
+    private @NotNull Object listSlice(List<Object> a) {
         List<Object> list = listArg(a,0,"listSlice");
         int from = intArg(a,1,"listSlice"), to = intArg(a,2,"listSlice");
         if (from < 0 || to > list.size() || from > to)
@@ -156,14 +161,13 @@ public class NativeListLibrary implements NativeLibrary {
         return new ArrayList<>(list.subList(from, to));
     }
 
-    private Object listReverse(List<Object> a) {
+    private @NotNull Object listReverse(List<Object> a) {
         List<Object> copy = new ArrayList<>(listArg(a,0,"listReverse"));
         Collections.reverse(copy);
         return copy;
     }
 
-    @SuppressWarnings("unchecked")
-    private Object listSort(List<Object> a) {
+    private @NotNull Object listSort(List<Object> a) {
         List<Object> copy = new ArrayList<>(listArg(a,0,"listSort"));
         copy.sort((x, y) -> {
             if (x instanceof Double dx && y instanceof Double dy) return Double.compare(dx, dy);
@@ -172,13 +176,13 @@ public class NativeListLibrary implements NativeLibrary {
         return copy;
     }
 
-    private Object listConcat(List<Object> a) {
+    private @NotNull Object listConcat(List<Object> a) {
         List<Object> out = new ArrayList<>(listArg(a,0,"listConcat"));
         out.addAll(listArg(a,1,"listConcat"));
         return out;
     }
 
-    private Object listFlat(List<Object> a) {
+    private @NotNull Object listFlat(List<Object> a) {
         List<Object> out = new ArrayList<>();
         for (Object item : listArg(a,0,"listFlat")) {
             if (item instanceof List<?> inner) out.addAll((List<Object>) inner);
@@ -187,22 +191,22 @@ public class NativeListLibrary implements NativeLibrary {
         return out;
     }
 
-    private Object listUnique(List<Object> a) {
+    private @NotNull Object listUnique(List<Object> a) {
         List<Object> out = new ArrayList<>();
         for (Object item : listArg(a,0,"listUnique"))
             if (!out.contains(item)) out.add(item);
         return out;
     }
 
-    private Object listFill(List<Object> a) {
-        Object val = a.get(0);
+    private @NotNull Object listFill(@NotNull List<Object> a) {
+        Object val = a.getFirst();
         int n = intArg(a,1,"listFill");
         List<Object> out = new ArrayList<>(n);
         for (int i = 0; i < n; i++) out.add(val);
         return out;
     }
 
-    private Object listShuffle(List<Object> a) {
+    private @Nullable Object listShuffle(List<Object> a) {
         Collections.shuffle(listArg(a,0,"listShuffle"));
         return null;
     }
